Upgrade to Babel 6
This also updates dependencies and fixes linting errors.

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-  "stage": 0,
-  "loose": "all",
+  "presets": [
+    "es2015",
+    "stage-1",
+    "react"
+  ],
+  "plugins": [
+    "react-require"
+  ]
 }
-
