--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "bugs": "https://github.com/rackt/async-props/issues",
   "scripts": {
-    "build": "babel ./modules --stage 0 --loose all -d lib --ignore '__tests__'",
+    "build": "babel ./modules -d lib --ignore '__tests__'",
     "build-umd": "NODE_ENV=production webpack modules/AsyncProps.js umd/AsyncProps.js",
     "build-min": "NODE_ENV=production webpack -p modules/AsyncProps.js umd/AsyncProps.min.js",
     "lint": "eslint modules",
@@ -26,34 +26,37 @@
     "react-router": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.34",
-    "babel-core": "^5.8.34",
-    "babel-eslint": "^3.1.23",
-    "babel-loader": "^5.4.0",
-    "eslint": "1.4.1",
-    "eslint-config-rackt": "1.0.0",
-    "eslint-plugin-react": "3.3.2",
-    "expect": "^1.12.0",
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-require": "^2.0.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-1": "^6.1.18",
+    "eslint": "^1.10.3",
+    "eslint-config-rackt": "^1.1.1",
+    "eslint-plugin-react": "^3.11.2",
+    "expect": "^1.13.0",
     "express": "^4.13.3",
     "form-serialize": "^0.7.0",
     "gzip-size": "^3.0.0",
     "history": "^1.13.1",
-    "karma": "^0.13.3",
-    "karma-browserstack-launcher": "^0.1.3",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.5",
+    "karma": "^0.13.15",
+    "karma-browserstack-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^1.1.3",
+    "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.0.1",
+    "mocha": "^2.3.4",
     "pretty-bytes": "^2.0.1",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-router": "^1.0.0",
-    "rimraf": "^2.4.2",
-    "webpack": "^1.12.6",
-    "webpack-dev-middleware": "^1.2.0"
+    "rimraf": "^2.4.4",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0"
   },
   "tags": [
     "react",
